Closed Bug 520407 Opened 15 years ago Closed 15 years ago

Bookmark export dialog ignores selected type

Categories

(Camino Graveyard :: Bookmarks, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: stuart.morgan+bugzilla, Assigned: stuart.morgan+bugzilla)

References

Details

(Keywords: regression, Whiteboard: [camino-2.0])

Attachments

(1 file)

Attached patch fixSplinter Review
It helps to check the selection *after* the dialog is shown.

I can't believe I didn't catch this in review of bug 519311 (or even testing) :(
Flags: camino2.0+
Attachment #404459 - Flags: superreview?(mikepinkerton)
Weird; I thought I tested this before submitting the patch, too.  I guess I never tried opening the resulting files.
Keywords: regression
Comment on attachment 404459 [details] [diff] [review]
fix

sr=pink

+  if (0 == [button indexOfSelectedItem])

While we're fixing this, can we fix the constant being on the left hand side? That's a crime against humanity.
Attachment #404459 - Flags: superreview?(mikepinkerton) → superreview+
Landed on CVS trunk and CAMINO_2_0_BRANCH, with 100% fewer crimes against humanity.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: