Camino only - Bug 520407: Read the currently selected bookmark export type, not the initial selection. r/sr=pink