camino/src/application/MainController.mm
@@ -1455,15 +1455,14 @@ const int kZoomActionsTag = 108;
   [savePanel setAccessoryView:mExportPanelView];
 
   // Set the initial extension based on the remembered value for the output type.
-  int selectedButton = [button indexOfSelectedItem];
-  [self setFileExtension:[button itemAtIndex:selectedButton]];
+  [self setFileExtension:[button itemAtIndex:[button indexOfSelectedItem]]];
 
   // start the save panel
   [NSMenu cancelAllTracking];
   int saveResult = [savePanel runModalForDirectory:nil file:NSLocalizedString(@"ExportedBookmarkFile", @"Exported Bookmarks")];
   if (saveResult != NSFileHandlingPanelOKButton)
     return;
-  if (0 == selectedButton)
+  if ([button indexOfSelectedItem] == 0)
     [[BookmarkManager sharedBookmarkManager] writeHTMLFile:[savePanel filename]];
   else
     [[BookmarkManager sharedBookmarkManager] writeSafariFile:[savePanel filename]];
